--- a/style.css
+++ b/style.css
@@ -19,3 +19,33 @@ h1{
     margin-left: 75px;
     height: 200px;
 }
+.card-dice{
+    height: 350px;
+    width: 350px;
+    border: 1px solid blue;
+    border-radius: 10px;
+    background-color: white;
+    margin-left: 80px;
+}
+.img-dice{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    height:140px;
+}
+.btn{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    width: 170px;
+    border-radius: 12px;
+    font-size: 20px;
+    color: white;
+    background-color:green;
+    cursor: pointer;
+    border: none;
+}
